cleaned up some mess with the buttons on submit etc...

--- a/main.css
+++ b/main.css
@@ -2,8 +2,4 @@
 @tailwind components;
 @tailwind utilities;
 
-
-p {
-    overflow: hidden;
-    max-width: 70ch;
-}
+p { overflow: hidden; max-width: 70ch; }
