* Submitting form sends all form input values successfully, including the textarea(message).
* Tried some cheeky css for styling ReCaptcha and input "sections" for the submitted/delivered message in email.

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -5,4 +5,10 @@
 
 .rc-anchor,
 .rc-anchor-logo-text,
+.rc-anchor-pt,
 .rc-anchor-pt > a { color: white; background-color: transparent; }
+
+form > input[name],
+form > input[value],
+form > textarea[name],
+form > textarea[value] { font-weight: bold; }
